--- a/packages/devel.org
+++ b/packages/devel.org
@@ -1,28 +1,28 @@
-| Tag    | Name                          | Purpose                                    |
-|--------+-------------------------------+--------------------------------------------|
-| pacman | docker                        | to run docker containers                   |
-| pacman | vala                          | Vala language                              |
-| aur    | android-studio                | Android studio IDE                         |
-| pacman | cloc                          | Calculates lines of code                   |
-| pacman | cmake                         | CMake build system                         |
-| pacman | clang                         | another cool c compiler                    |
-| pacman | arm-none-eabi-gcc             | arm toys                                   |
-| pacman | arm-none-eabi-newlib          | more arm toys                              |
-| pacman | emscripten                    | llvm to javascript                         |
-| aur    | umlet                         | UML builder                                |
-| pacman | yarn                          | dependency installer                       |
-| pacman | gdb                           | the gnu debugger                           |
-| pacman | strace                        | trace system calls                         |
-| pacman | ltrace                        | trace library function calls               |
-| pacman | radare2                       | the best reverse engineering toy out there |
-| npm    | tern                          | JavaScript analyzer (needed for Emacs)     |
-| npm    | js-beautify                   | beautify web                               |
-| npm    | fx                            | a cool way to view JSON                    |
-| pip    | yq                            | YAML and XML interface to jq               |
-| aur    | aha                           | ANSI to HTML                               |
-| go     | github.com/saibing/bingo      | LSP for GO                                 |
-| go     | github.com/nsf/gocode         | autocompletion for GO                      |
-| npm    | vscode-css-languageserver-bin | LSP for CSS                                |
-| npm    | typescript-language-server    | LSP for typescript                         |
-| pip    | python-language-server        | LSP for python                             |
-| pacman | jadx                          | Java decompiler                            |
+| Tag    | Name                          | Git Link                 | Purpose                                    |
+|--------+-------------------------------+--------------------------+--------------------------------------------|
+| pacman | docker                        | N.A.                     | to run docker containers                   |
+| pacman | vala                          | N.A.                     | Vala language                              |
+| aur    | android-studio                | N.A.                     | Android studio IDE                         |
+| pacman | cloc                          | N.A.                     | Calculates lines of code                   |
+| pacman | cmake                         | N.A.                     | CMake build system                         |
+| pacman | clang                         | N.A.                     | another cool c compiler                    |
+| pacman | arm-none-eabi-gcc             | N.A.                     | arm toys                                   |
+| pacman | arm-none-eabi-newlib          | N.A.                     | more arm toys                              |
+| pacman | emscripten                    | N.A.                     | llvm to javascript                         |
+| aur    | umlet                         | N.A.                     | UML builder                                |
+| pacman | yarn                          | N.A.                     | dependency installer                       |
+| pacman | gdb                           | N.A.                     | the gnu debugger                           |
+| pacman | strace                        | N.A.                     | trace system calls                         |
+| pacman | ltrace                        | N.A.                     | trace library function calls               |
+| pacman | radare2                       | N.A.                     | the best reverse engineering toy out there |
+| npm    | tern                          | N.A.                     | JavaScript analyzer (needed for Emacs)     |
+| npm    | js-beautify                   | N.A.                     | beautify web                               |
+| npm    | fx                            | N.A.                     | a cool way to view JSON                    |
+| pip    | yq                            | N.A.                     | YAML and XML interface to jq               |
+| aur    | aha                           | N.A.                     | ANSI to HTML                               |
+| go     | bingo                         | github.com/saibing/bingo | LSP for GO                                 |
+| go     | gocode                        | github.com/nsf/gocode    | autocompletion for GO                      |
+| npm    | vscode-css-languageserver-bin | N.A.                     | LSP for CSS                                |
+| npm    | typescript-language-server    | N.A.                     | LSP for typescript                         |
+| pip    | python-language-server        | N.A.                     | LSP for python                             |
+| pacman | jadx                          | N.A.                     | Java decompiler                            |
